# legal-document-be

./: .env.example  .gitignore  Cargo.toml
src/: app_config.rs  main.rs  utils.rs
src/indexer/: mod.rs
src/indexer/abi/: AccountIngress.json  LegalDocumentManager.json
src/indexer/contracts/: account_ingress.rs  legal_document_manager.rs  mod.rs
src/middlewares/: auth.rs
src/models/: division_model.rs  document_model.rs  document_type_model.rs  draft_model.rs  draft_task_model.rs  mod.rs  official.rs  officier_model.rs  onchain_officer_model.rs  position_model.rs  published_doc_model.rs  review_task_model.rs  signature_model.rs  task_model.rs  user.rs
src/routes/: auth.rs  division_route.rs  draft_route.rs  draft_task_route.rs  home.rs  mod.rs  officer_route.rs  published_doc_route.rs  review_task_route.rs  task_route.rs
src/sql/: create-table-new.sql  create-table.sql  create-user.sql  create_division.sql  create_official.sql  create_table.sql  get-user.sql  query_officer_password.sql  query_official_password.sql
src/sql/division/: create_division.sql  query_supervisory_id.sql
src/sql/document_types/: query_document_types.sql
src/sql/documents/: create_document.sql
src/sql/draft_tasks/: create_draft_task.sql  query_assigned_drafting_task_detail.sql  query_assigned_drafting_tasks.sql  query_created_draft_tasks.sql  query_division_drafter.sql  query_drafting_task_detail.sql  update_draft_task_submitted.sql
src/sql/drafts/: create_draft.sql  query_draft_detail.sql  query_draft_list.sql  query_publishable_draft.sql  query_submittable_draft.sql
src/sql/officer/: create_officer.sql  update_finalized.sql
src/sql/officers/: query_finalization.sql  query_officer_info.sql  query_onchain_info.sql  query_onchain_info_id.sql  query_password.sql  query_private_key.sql  query_validation_info.sql
src/sql/onchain_documents/: query_published_doc_detail.sql  query_published_docs.sql
src/sql/onchain_officer/: create_onchain_officer.sql
src/sql/review_tasks/: create_review_task.sql  query_assigned_review_task_detail.sql  query_assigned_review_tasks.sql  query_created_review_tasks.sql  update_review_task_signed.sql
src/sql/signatures/: create_draft_sig.sql  query_doc_signatures.sql  query_draft_signatures.sql  query_draft_signer.sql
src/sql/tasks/: create_review_task.sql  query_assigned_review_task_detail.sql  query_review_task_detail.sql
