[package]
name = "legal-document-be"
version = "0.1.0"
edition = "2021"
default-run = "legal-document-be"

# See more keys and their definitions at 

[dependencies]
actix-web = { version = "4", features = [
    "macros",
    "cookies",
    "secure-cookies",
] }
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-identity = "0.5.2"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
config = "0.13.1"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
bcrypt = "0.15.0"
regex = "1.9.5"
derive_more = "0.99.17"
ethers = "2.0.10"
bytes = "1.5.0"
aes-gcm = "0.10.3"
